# cfp.fosscu.org

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
cfpPortal/: asgi.py  settings.py  urls.py  wsgi.py
cfp_portal/: .env-sample  asgi.py  settings.py  urls.py  wsgi.py
proposals/: admin.py  models.py
proposals/migrations/: 0001_initial.py
static/CACHE/css/: output.1d76f33070a3.css  output.ebd8682eb31b.css
static/src/: input.css  output.css
templates/users/main/: base.html
templates/users/screens/: forgot_password.html  login.html  signup.html  verify.html
users/: admin.py  authentication.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_talks.py  0003_usermodel_profile_delete_users.py  0004_alter_usermodel_managers.py  0005_rename_first_name_profile_firstname_and_more.py  0006_alter_usermodel_managers.py  0007_rename_firstname_usermodel_first_name_and_more.py
users/templates/users/: forgotPassword.html  login.html  signup.html  verify.html
